// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSteps renders step title inside "headingElement" element 1`] = `
<div
  aria-label="aria-label"
  class="euiSteps testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiStep"
  >
    <div>
      <span
        class="euiScreenReaderOnly"
      >
        Step 1
      </span>
      <h2
        class="euiTitle euiStep__title"
        data-step-num="1"
      >
        first title
      </h2>
    </div>
    <div
      class="euiStep__content"
    >
      <p>
        Do this first
      </p>
    </div>
  </div>
  <div
    class="euiStep"
  >
    <div>
      <span
        class="euiScreenReaderOnly"
      >
        Step 2
      </span>
      <h2
        class="euiTitle euiStep__title"
        data-step-num="2"
      >
        second title
      </h2>
    </div>
    <div
      class="euiStep__content"
    >
      <p>
        Then this
      </p>
    </div>
  </div>
  <div
    class="euiStep"
  >
    <div>
      <span
        class="euiScreenReaderOnly"
      >
        Step 3
      </span>
      <h2
        class="euiTitle euiStep__title"
        data-step-num="3"
      >
        third title
      </h2>
    </div>
    <div
      class="euiStep__content"
    >
      <p>
        And finally, do this
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiSteps renders steps 1`] = `
<div
  aria-label="aria-label"
  class="euiSteps testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiStep"
  >
    <div>
      <span
        class="euiScreenReaderOnly"
      >
        Step 1
      </span>
      <p
        class="euiTitle euiStep__title"
        data-step-num="1"
      >
        first title
      </p>
    </div>
    <div
      class="euiStep__content"
    >
      <p>
        Do this first
      </p>
    </div>
  </div>
  <div
    class="euiStep"
  >
    <div>
      <span
        class="euiScreenReaderOnly"
      >
        Step 2
      </span>
      <p
        class="euiTitle euiStep__title"
        data-step-num="2"
      >
        second title
      </p>
    </div>
    <div
      class="euiStep__content"
    >
      <p>
        Then this
      </p>
    </div>
  </div>
  <div
    class="euiStep"
  >
    <div>
      <span
        class="euiScreenReaderOnly"
      >
        Step 3
      </span>
      <p
        class="euiTitle euiStep__title"
        data-step-num="3"
      >
        third title
      </p>
    </div>
    <div
      class="euiStep__content"
    >
      <p>
        And finally, do this
      </p>
    </div>
  </div>
</div>
`;

exports[`EuiSteps renders steps with firstStepNumber 1`] = `
<div
  aria-label="aria-label"
  class="euiSteps testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiStep"
  >
    <div>
      <span
        class="euiScreenReaderOnly"
      >
        Step 10
      </span>
      <p
        class="euiTitle euiStep__title"
        data-step-num="10"
      >
        first title
      </p>
    </div>
    <div
      class="euiStep__content"
    >
      <p>
        Do this first
      </p>
    </div>
  </div>
  <div
    class="euiStep"
  >
    <div>
      <span
        class="euiScreenReaderOnly"
      >
        Step 11
      </span>
      <p
        class="euiTitle euiStep__title"
        data-step-num="11"
      >
        second title
      </p>
    </div>
    <div
      class="euiStep__content"
    >
      <p>
        Then this
      </p>
    </div>
  </div>
  <div
    class="euiStep"
  >
    <div>
      <span
        class="euiScreenReaderOnly"
      >
        Step 12
      </span>
      <p
        class="euiTitle euiStep__title"
        data-step-num="12"
      >
        third title
      </p>
    </div>
    <div
      class="euiStep__content"
    >
      <p>
        And finally, do this
      </p>
    </div>
  </div>
</div>
`;
